--- a/client/public/style.css
+++ b/client/public/style.css
@@ -247,6 +247,12 @@ input {
   text-align: center;
 }
 
+.title_s {
+  margin-top: 16px;
+  font-size: 14px;
+  text-align: center;
+  font-weight: bold;
+}
 
 /* デポジットセクション */
 .section_deposit {
